src/sources/snapshots/cdviz_collector__sources__parsers__tests__parse_tap_with_comments.snap
---
source: src/sources/parsers.rs
expression: result
---
plan:
  end: 2
  start: 1
tests:
  - description: Connect
    directive: ~
    number: 1
    status: ok
    yaml_diagnostics: ~
  - description: Query
    directive: ~
    number: 2
    status: ok
    yaml_diagnostics: ~
version: 14
