src/sources/snapshots/cdviz_collector__sources__parsers__tests__parse_yaml_array.snap
---
source: src/sources/parsers.rs
expression: result
---
- name: test1
  status: passed
- name: test2
  status: failed
