src/sources/snapshots/cdviz_collector__sources__parsers__tests__parse_yaml_simple_object.snap
---
source: src/sources/parsers.rs
expression: result
---
count: 42
name: MyTestSuite
version: 1.0.0
